Update product.html - add errorMsg element

--- a/front/html/product.html
+++ b/front/html/product.html
@@ -77,6 +77,8 @@
                 </div>
               </div>
 
+              <p id="errorMsg"><!-- ceci est un message d'erreur --></p>
+
               <div class="item__content__addButton">
                 <button id="addToCart">Ajouter au panier</button>
               </div>
