--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -34,7 +34,7 @@
           <nav>
             <ul>
               <a href="/kanap"><li>Accueil</li></a>
-              <a href="#"><li>Panier</li></a>
+              <a href="./cart"><li>Panier</li></a>
             </ul>
           </nav>
         </div>
