--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,12 @@
       </div>
       <div class="limitedWidthBlockContainer menu">
         <div class="limitedWidthBlock">
-          <a href="#">
+          <a href="/kanap">
             <img class="logo" src="./images/logo.png" alt="Logo de l'entreprise">
           </a>
           <nav>
             <ul>
-              <a href="#"><li>Accueil</li></a>
+              <a href="/kanap"><li>Accueil</li></a>
               <a href="./cart"><li>Panier</li></a>
             </ul>
           </nav>
