--- a/confirmation.html
+++ b/confirmation.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
     <link href="./css/confirmation.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,6 +75,6 @@
         </div>
       </div>
     </footer>
-  <script src="./js/confirmation.js"></script>
+  <script type="module" src="./js/confirmation.js"></script>
   </body>
 </html>
