--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
     <link href="./css/product.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,8 +76,6 @@
                   <input type="number" name="itemQuantity" min="1" max="100" value="0" id="quantity">
                 </div>
               </div>
-
-              <p id="errorMsg"><!-- ceci est un message d'erreur --></p>
 
               <div class="item__content__addButton">
                 <button id="addToCart">Ajouter au panier</button>
