--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -133,6 +133,6 @@
         </div>
       </div>
     </footer>
-  <script type="module" src="./js/cart.js"></script>
+  <script type="module" src="./js/pages/cart.js"></script>
   </body>
 </html>
