--- a/confirmation.html
+++ b/confirmation.html
@@ -75,6 +75,6 @@
         </div>
       </div>
     </footer>
-  <script type="module" src="./js/confirmation.js"></script>
+  <script type="module" src="./js/pages/confirmation.js"></script>
   </body>
 </html>
