--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/pages/index.js"></script>
   </body>
 </html>
