--- a/product.html
+++ b/product.html
@@ -110,6 +110,6 @@
         </div>
       </div>
     </footer>
-  <script type="module" src="./js/product.js"></script>
+  <script type="module" src="./js/pages/product.js"></script>
   </body>
 </html>
